# joepardy

./: .gitignore  .gitmodules  Dockerfile  pyproject.toml
.github/workflows/: docker.yml
api/: config.py  db.py  html.py  llm.py  query.py  server.py
scripts/: build_db.py
web/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  clean.ts  format.ts  markdown.ts  purify.ts
web/src/lib/components/: Markdown.svelte  Sanitize.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/src/routes/explain/[id]/: +page.svelte  +page.ts
web/src/routes/trivia/[id]/: +page.svelte  +page.ts
